--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-select": "^5.10.2",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
